[package]
name = "image_similarity"
version = "0.1.0"
authors = ["Cocoa <0xbbc@0xbbc.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencv = {version = "0.28", default-features = false, features = ["opencv-41", "contrib"]}
walkdir = "2"
clap = "2"
